WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13500
REGRESSION: Listbox scrollbar does not reflect actual scrolled position when selected option is added after layout
https://bugs.webkit.org/show_bug.cgi?id=13500
Summary
REGRESSION: Listbox scrollbar does not reflect actual scrolled position when ...
mitz
Reported
2007-04-26 06:50:15 PDT
In the attached test case, the listbox comes up with the last option selected and in scrolled into view, but the scroll thumb is all the way up. The test case mimics incremental loading by forcing layout before the <select> is closed. I think this is one of the issues that were mentioned in
bug 11447
.
Attachments
Test case
(278 bytes, text/html)
2007-04-26 06:51 PDT
,
mitz
no flags
Details
Delay scroll-to-reveal when m_optionsChanged is set
(44.30 KB, patch)
2007-04-26 07:52 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-04-26 06:51:01 PDT
Created
attachment 14202
[details]
Test case
mitz
Comment 2
2007-04-26 07:52:31 PDT
Created
attachment 14203
[details]
Delay scroll-to-reveal when m_optionsChanged is set Includes pixel test and change log
Darin Adler
Comment 3
2007-04-26 08:21:51 PDT
Comment on
attachment 14203
[details]
Delay scroll-to-reveal when m_optionsChanged is set r=me
Mark Rowe (bdash)
Comment 4
2007-04-26 22:22:51 PDT
Landed in
r21132
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug