2007-04-26  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13500
          REGRESSION: Listbox scrollbar does not reflect actual scrolled position when selected option is added after layout

        Test: fast/forms/listbox-scrollbar-incremental-load.html

        The scroller position was not updated correctly during insertion, since
        scrollbar proportions are updated only during layout

        * rendering/RenderListBox.cpp:
        (WebCore::RenderListBox::selectionChanged): Delay scrolling to reveal the
        selection until after layout if m_optionsChanged is set. Layout is
        guaranteed to happen soon when the flag is set.

2007-04-26  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=13500
          REGRESSION: Listbox scrollbar does not reflect actual scrolled position when selected option is added after layout

        * fast/forms/listbox-scrollbar-incremental-load-expected.checksum: Added.
        * fast/forms/listbox-scrollbar-incremental-load-expected.png: Added.
        * fast/forms/listbox-scrollbar-incremental-load-expected.txt: Added.
        * fast/forms/listbox-scrollbar-incremental-load.html: Added.


Canonical link: https://commits.webkit.org/17649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21132 268f45cc-cd09-0410-ab3c-d52691b4dbfc